--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,23 @@
-name: Independent Computer Science Laboratory
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+title: icslab blog
+email: crew@icslab.eu
+description: > # this means to ignore newlines until "baseurl:"
+    This is the Independent Computer Scientists' Blog. 
+    We share technical and science related information. 
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://icslab.eu" # the base hostname & protocol for your site
+
+#twitter_username: jekyllrb
+github_username:  icslabspace
+
+paginate: 1
+
+# Build settings
 markdown: kramdown
-permalink: /blog/:year/:month/:day/:title
