--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://icslab.eu" # the base hostname & protocol for your site
 
+#facebook_app_id : 
+
 #twitter_username: jekyllrb
 github_username:  icslabspace
 
