--- a/_config.yml
+++ b/_config.yml
@@ -24,3 +24,11 @@ paginate_path: "blog/posts/:num"
 
 # Build settings
 markdown: kramdown
+
+# facebook configs
+og_image: assets/images/logo-1-fb.png # Default image for Open Graph tag
+og_image_type: image/png
+og_image_width: 300
+og_image_height: 300
+fb_profile_id: icslab.eu
+
