--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
     This is the Independent Computer Scientists' Blog. 
     We share technical and science related information. 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://icslab.eu" # the base hostname & protocol for your site
+url: "http://www.icslab.eu" # the base hostname & protocol for your site
 
 #facebook_app_id : 
 
