--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ description: > # this means to ignore newlines until "baseurl:"
     We share technical and science related information. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.icslab.eu" # the base hostname & protocol for your site
-
+site.github.url: "https://github.com/icslabspace/icslabspace.github.io"
 #facebook_app_id : 
 
 #twitter_username: jekyllrb
